Gradle with Jigsaw: Test の実行